[package]
name = "rustaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
glfw = "0.43.0"
opengl-raw = { path = "C:\\Program Files (x86)\\inkscape\\cppProjects\\opengl-raw" }
rectangle-pack = "0.4.2"
image = "0.23.14"
noise = "0.6.0"
glam = "0.20.2"
crossbeam = "0.8.1"
rayon = "1.5.1"

[profile.dev]
opt-level = 0
debug = 0
incremental = false
overflow-checks = false
lto = "off"
