[package]
name = "rustaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.43.0"
opengl-raw = { path = "./opengl-raw" }
rectangle-pack = "0.4.2"
image = "0.23.14"
noise = "0.6.0"
glam = "0.20.2"
crossbeam = "0.8.1"
rayon = "1.5.1"
